# flipdot

./: Cargo.toml  LICENSE  README.md  appveyor.yml  rustfmt.toml
.github/workflows/: rust.yml
examples/: odk.rs  send_pages.rs  test_multi_page.rs
libs/core/: Cargo.toml  README.md
libs/core/src/: errors.rs  frame.rs  lib.rs  message.rs  page.rs  sign_bus.rs  sign_type.rs
libs/serial/: Cargo.toml  README.md
libs/serial/src/: errors.rs  lib.rs  serial_port.rs  serial_sign_bus.rs
libs/testing/: Cargo.toml  README.md
libs/testing/src/: errors.rs  lib.rs  odk.rs  virtual_sign_bus.rs
src/: errors.rs  lib.rs  sign.rs
tests/: error_tests.rs  serial_sign_bus_tests.rs  sign_tests.rs  virtual_sign_bus_tests.rs
tests/mock_serial_port/: mod.rs
