[package]
edition = "2018"
name = "flipdot"
version = "0.3.0" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "A library for interacting with Luminator flip-dot and LED signs over RS-485"
license = "MIT"
documentation = "https://docs.rs/flipdot"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus", "sign", "RS-485"]
categories = ["hardware-support"]

[dependencies]
failure = "0.1.3"
failure_derive = "0.1.3"

flipdot-core = { version = "0.3", path = "libs/core" }
flipdot-serial = { version = "0.3", path = "libs/serial" }

[dev-dependencies]
env_logger = "0.6.0"
log = "0.4.6"
serial = "0.4.0"
serial-core = "0.4.0"

flipdot-testing = { version = "0.3", path = "libs/testing" }

[workspace]
