[package]
name = "flipdot-core"
version = "0.6.0" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Core types for describing communication with Luminator flip-dot and LED signs"
license = "MIT"
documentation = "https://docs.rs/flipdot-core"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus"]
categories = ["hardware-support"]
edition = "2018"

[dependencies]
derive_more = "0.99.5"
lazy_static = "1.4.0"
num-traits = "0.2.11"
regex = "1.3.7"
thiserror = "1.0.16"

[dev-dependencies]
serial = "0.4.0"

flipdot = { version = "0.6.0", path = "../.." }
flipdot-serial = { version = "0.6.0", path = "../serial" }
flipdot-testing = { version = "0.6.0", path = "../testing" }
