[package]
name = "flipdot-core"
version = "0.7.0" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Core types for describing communication with Luminator flip-dot and LED signs"
license = "MIT"
documentation = "https://docs.rs/flipdot-core"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus"]
categories = ["hardware-support"]
edition = "2021"

[dependencies]
derive_more = "0.99.17"
lazy_static = "1.4.0"
num-traits = "0.2.18"
regex = "1.10.3"
thiserror = "1.0.57"

[dev-dependencies]
serial = "0.4.0"
test-case = "3.3.1"

flipdot = { path = "../.." }
flipdot-serial = { path = "../serial" }
flipdot-testing = { path = "../testing" }
