[package]
name = "flipdot-core"
version = "0.7.1" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Core types for describing communication with Luminator flip-dot and LED signs"
license = "MIT"
documentation = "https://docs.rs/flipdot-core"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus"]
categories = ["hardware-support"]
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
lazy_static = "1.5.0"
num-traits = "0.2.19"
regex = "1.11.1"
thiserror = "2.0.12"

[dev-dependencies]
serial = "0.4.0"
test-case = "3.3.1"

flipdot = { path = "../.." }
flipdot-serial = { path = "../serial" }
flipdot-testing = { path = "../testing" }
