[package]
name = "flipdot-serial"
version = "0.6.0" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Tools for communicating with Luminator signs over serial"
license = "MIT"
documentation = "https://docs.rs/flipdot-serial"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus", "sign", "RS-485"]
categories = ["hardware-support"]
edition = "2021"

[dependencies]
log = "0.4.8"
serial-core = "0.4.0"
thiserror = "1.0.16"

flipdot-core = { version = "0.6.0", path = "../core" }

[dev-dependencies]
serial = "0.4.0"
