[package]
name = "flipdot-serial"
version = "0.7.1" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Tools for communicating with Luminator signs over serial"
license = "MIT"
documentation = "https://docs.rs/flipdot-serial"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus", "sign", "RS-485"]
categories = ["hardware-support"]
edition = "2024"

[dependencies]
log = "0.4.26"
serial-core = "0.4.0"
thiserror = "2.0.12"

flipdot-core = { version = "0.7.1", path = "../core" }

[dev-dependencies]
serial = "0.4.0"
