[package]
edition = "2018"
name = "flipdot-testing"
version = "0.3.0" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Tools for testing and debugging Luminator sign communications"
license = "MIT"
documentation = "https://docs.rs/flipdot-testing"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus"]
categories = ["hardware-support", "development-tools::testing"]

[dependencies]
failure = "0.1.3"
failure_derive = "0.1.3"
log = "0.4.6"
serial-core = "0.4.0"

flipdot-core = { version = "0.3", path = "../core" }
flipdot-serial = { version = "0.3", path = "../serial" }

[dev-dependencies]
serial = "0.4.0"
