[package]
name = "flipdot-testing"
version = "0.6.0" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Tools for testing and debugging Luminator sign communications"
license = "MIT"
documentation = "https://docs.rs/flipdot-testing"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus"]
categories = ["hardware-support", "development-tools::testing"]
edition = "2021"

[dependencies]
log = "0.4.21"
serial-core = "0.4.0"
thiserror = "1.0.57"

flipdot-core = { version = "0.6.0", path = "../core" }
flipdot-serial = { version = "0.6.0", path = "../serial" }

[dev-dependencies]
serial = "0.4.0"
test-case = "3.3.1"
