[package]
name = "flipdot-testing"
version = "0.8.0" # remember to update html_root_url
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Tools for testing and debugging Luminator sign communications"
license = "MIT"
documentation = "https://docs.rs/flipdot-testing"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["flip-dot", "Luminator", "bus"]
categories = ["hardware-support", "development-tools::testing"]
edition = "2024"

[dependencies]
log = "0.4.26"
serial-core = "0.4.0"
thiserror = "2.0.12"

flipdot-core = { version = "0.8.0", path = "../core" }
flipdot-serial = { version = "0.8.0", path = "../serial" }

[dev-dependencies]
serial = "0.4.0"
test-case = "3.3.1"
